// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthereumAuthProvider authenticate 1`] = `"0x92d414fa574ea420dae28a58454aaed02cab50ff2c13f0af728cfd15e4816ca5"`;

exports[`EthereumAuthProvider createLink 1`] = `
Object {
  "account": "eip155:1337:0x8fe2c4516e920425e177658aaac451ca0463ed69",
  "message": "Link this account to your identity

did:3:bafysdfwefwe 
Timestamp: 1538352000",
  "signature": "0x146cf11fa0472090d25b04d75c4159855c696549f2ae2ea47aea4aa89f8508a1234e3c2000622d9e3d02473bb77438d27d063024f82ec6326f1bcb6e5a3dc36b1b",
  "timestamp": 1538352000,
  "type": "ethereum-eoa",
  "version": 2,
}
`;

exports[`Ocap requestCapability 1`] = `
Object {
  "h": Object {
    "t": "eip4361-eip191",
  },
  "p": Object {
    "aud": "did:key:z6MkrBdNdwUPnXDVD1DCxedzVVBpaGi8aSmoXFAeKNgtAer8",
    "domain": "https://service.org/",
    "exp": "2018-10-08T00:00:00.000Z",
    "iat": "2018-10-01T00:00:00.000Z",
    "iss": "did:pkh:eip155:eip155:1337:0x8fe2c4516e920425e177658aaac451ca0463ed69",
    "nonce": "8188hq9AQg",
    "resources": Array [
      "ceramic://kjzl6cwe1jw147dvq16zluojmraqvwdmbh61dx9e0c59i344lcrsgqfohexp60s",
    ],
    "statement": "Give this application access to some of your data on Ceramic",
    "version": "1",
  },
  "s": Object {
    "s": "0x2fa4f567f8e274f0cb3d70c4fb3f17b49a6ab55c07ba1732c4b26a8fd609c0b6089f1298c4359c0604cfc227d0598afac6d7d5e12732b49ac864e2c0cd7186791b",
  },
}
`;

exports[`authenticate correctly sign auth message 1`] = `"0xcf54e7560501fa53e3f7092672a920c346034ba93d001919f0cb5445851b5685"`;

exports[`createLink create erc1271 proof correctly 1`] = `
Object {
  "account": "eip155:1337:0xbe6c27620b271dd76f1787cdef1f4375cff3fa1f",
  "message": "Link this account to your identity

did:3:bafysdfwefwe",
  "signature": "0x39b83baea57e2e7ca49e904a145758d791086074cdc83d2824a65aef1a89ba397e20c32f9e60a6b1a232de3bd89b39537e3ef676ae750b1cd79266147a4312d01c",
  "type": "erc1271",
  "version": 2,
}
`;

exports[`createLink create ethereumEOA proof correctly 1`] = `
Object {
  "account": "eip155:1:0x8fe2c4516e920425e177658aaac451ca0463ed69",
  "message": "Link this account to your identity

did:3:bafysdfwefwe",
  "signature": "0x39b83baea57e2e7ca49e904a145758d791086074cdc83d2824a65aef1a89ba397e20c32f9e60a6b1a232de3bd89b39537e3ef676ae750b1cd79266147a4312d01c",
  "type": "ethereum-eoa",
  "version": 2,
}
`;

exports[`createLink throw if erc1271 is on wrong chain 1`] = `[Error: ChainId in provider (1337) is different from AccountId (123)]`;
